# headphones-toolbox

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.js  main.js.map  main.ts  quasar-variables.sass  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: configuration.json  oratory_15.json  oratory_8.json
src-tauri/src/: commands.rs  dto.rs  filters.rs  lib.rs  low_level.rs  main.rs  model.rs
src/components/: AboutDialog.vue  CodecCard.vue  Filter.vue  FilterCard.vue  FilterCoefficients.js  FilterTypes.js  Graph.vue  InfoMenu.vue  PreProcessingCard.vue
