[package]
name = "headphones-toolbox"
version = "0.0.8"
description = "An application configure Ploopy Headphones."
authors = ["George Norton"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusb = "0.9.4"
byteorder = "1.5.0"
simplelog = "0.12.2"
log = "0.4.29"
parking_lot = "0.12.5"
tauri-plugin-fs = "2.5.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-os = "2.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
